2009-02-22  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvs/www_funcs.c (build_encode_URL): Fixed
	string length calculation. Thanks to
	Michael Meyer who spotted this and sent this patch!

2009-02-22  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/control: Fixed minor typo.

2009-02-22  Tim Brown <timb@nth-dimension.org.uk>

	* libopenvas/Makefile: Forward ported fix for broken linking.

2009-02-22  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/changelog: New upstream release.

	* packaging/debian/control: Updated the control file to take account
        of translation work as part of the Smith review project.
	
	* packaging/debian/patches/00list,
	packaging/debian/patches/linker-libs.dpatch, packaging/debian/rules:
	Fixed broken linking (linker-libs.dpatch).

2009-02-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/openvas_ssh_login.c (openvas_ssh_login_file_write):
	Close file descriptor in case of error.

2009-02-10  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* doc/Doxyfile_full: Makes the resulting documentation even
	more comprehensive. Switch off Latex output.

	* Makefile: make src doc latex creation conditional to presence
	of respective directories.

2009-02-06  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-02-06  Michael Wiegand <michael.wiegand@intevation.de>

	Last minute fixes for the openvas-libraries 2.0.1 release.

	* MANIFEST: Updated.

	* Makefile: Fixed targets "clean" and "distclean" to correctly remove
	generated HTML documentation.

2009-02-06  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 2.0.1 release.

	* VERSION: Set to 2.0.1.

	* CHANGES: Updated.

	* include/libopenvas.h: Added Doxygen directives to include README and
	COPYING files into HTML documentation.

	* ChangeLog: Cleanup.
